Fix missing gradient on safari (#56)
* Add check for safari user-agent

* Fix safari gradient height for different viewports

* Restore default safari condition

--- a/src/components/Gradient/index.module.scss
+++ b/src/components/Gradient/index.module.scss
@@ -53,6 +53,18 @@
   clip-path: url("#gradientClipPath");
 }
 
+.gradientSafari {
+  height: 75%;
+
+  @include down($breakpoint-lg) {
+    height: 70%;
+  }
+
+  @include down($breakpoint-sm) {
+    height: 75%;
+  }
+}
+
 .gradientPath {
   @include down($breakpoint-md) {
     display: none;
